--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#19A9F8</color>
+    <color name="colorPrimaryDark">#115175</color>
+    <color name="colorAccent">#F52727</color>
+    <color name="colorGreen">#219526</color>
+    <color name="colorDanger">#f44336</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrey">#ACACAC</color>
+    <color name="colorLightGrey">#DDDDDD</color>
 </resources>
+
+
