--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,15 +29,26 @@ tools:context=".MainActivity">
     android:layout_alignParentStart="true"
     android:layout_toStartOf="@+id/btnAdd_room" />
 
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Room"
-    android:id="@+id/btnAdd_room"
-    android:layout_gravity="right"
-    style="?android:attr/borderlessButtonStyle"
+    <Button
+        android:id="@+id/btnAdd_room"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Add Room"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/bg_button_round"
+        android:textColor="@color/colorWhite"
+        android:textAllCaps="false"/>
 
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentEnd="true" />
+    <Button
+        android:id="@+id/buttonlist"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="list"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/bg_button_round"
+        android:textColor="@color/colorWhite"
+        android:textAllCaps="false"/>
+
 
 </RelativeLayout>
